console adapter 6